Fixed header not showing on home

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -34,6 +34,7 @@ $menu-animation-timing: 120ms ease;
     @include mixins.sm {
         --logo-size: 5rem;
         top: -.3rem;
+        left: 0;
         // position: relative;
     }
 
@@ -56,7 +57,7 @@ header {
 
     @include mixins.sm {
         padding: 1rem;
-        padding-bottom: 2.5rem;
+        padding-bottom: 2.8rem;
     }
 
     nav {
